manifests/openshift-observability-hub/microshift-otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    otel: collect
  name: otel-collector
  namespace: otelcol
spec:
  replicas: 1
  selector:
    matchLabels:
      otel: collect
  template:
    metadata:
      labels:
        otel: collect
    spec:
      serviceAccountName: otelcol 
      hostNetwork: true # this is only to access hostNetwork Jaeger service
      serviceAccount: otelcol 
      securityContext:
        privileged: true
      volumes:
      - configMap:
          name: otelcol
          items:
            - key: otel-collector-config
              path: otel-collector-config.yaml
        name: otel-collector-config
      - configMap:
          name: otelcol-cabundle
        name: cabundle-volume
      - configMap:
          name: edge-token
        name: edge-token
      - configMap:
          name: client-ca
        name: client-ca
      containers:
      - name: otel-collector
        imagePullPolicy: IfNotPresent
        args:
          - "--config=/conf/otel-collector-config.yaml"
        image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:0.64.1
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 4317 # Default endpoint for OpenTelemetry receiver.
        - containerPort: 4318 # Default endpoint for OpenTelemetry receiver.
        volumeMounts:
        - mountPath: /conf
          name: otel-collector-config
        - mountPath: /conf/edge-token
          name: edge-token
        - mountPath: /conf/ca
          name: client-ca
        - mountPath: /etc/pki/ca-trust/source/service-ca
          name: cabundle-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    otel: collect
  name: otel-collector
  namespace: otelcol
spec:
  ports:
  - name: otlp
    port: 4317
    protocol: TCP
  - name: otlphttp
    port: 4318
    protocol: TCP
  selector:
    otel: collect
  type: ClusterIP
