manifests/openshift-observability-hub/ocp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: otelcol
  namespace: thanos
spec:
  to:
    kind: Service
    name: thanos-receive
    weight: 100
  port:
    targetPort: 4318
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
