manifests/openshift-observability-hub/ocp-sidecar-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: otelcol
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  port:
    targetPort: 4318
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
